<resources>
    <string name="app_name" translatable="false">Earth</string>

    <string name="title_home">Home</string>
    <string name="title_sorting">Sorting</string>
    <string name="title_stats">Statistics</string>
    <string name="title_places">Places</string>
    <string name="title_settings">Settings</string>
    <string name="title_login">Login</string>
    <string name="title_profile">Profile</string>
    <string name="title_sharephoto">Share photo</string>

    <string name="please_enter_password">Please enter password</string>
    <string name="enter_your_password">Enter your password…</string>
    <string name="enter_your_username">Enter your username…</string>
    <string name="enter_your_email">Enter your email…</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="signup" translatable="false">Signup</string>
    <string name="password">Password</string>

    <string name="iconChangeWarning">Attention! This function is not stable,
        if the application starts to work incorrectly or stops starting,
        please reinstall it!</string>

    <!-- Error -->
    <string name="oops">Oops…</string>
    <string name="error_joke">The earth is spinning too fast</string>

    <!-- Dialogs -->
    <string name="сonfirmation">Confirmation</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="u_selected_icon">You selected new Icon, app will be restarted if you continue.</string>
    <string name="u_selected_theme">You selected new Theme, app will be quick restarted if you continue.</string>

    <!-- Settings -->
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="General">General</string>
    <string name="Language">Language</string>
    <string name="Theme">Theme</string>
    <string name="App_Icon">App Icon</string>
    <string name="LogOut">Log Out</string>
    <string name="RemindService">Remind service</string>

    <string name="choice">Good choice!</string>

    <string name="selectNewIcon">Select new icon</string>
    <string name="selectNewTheme">Select new theme</string>
    <string name="newIconNotice">App will be restarted after your choice</string>
    <string name="newThemeNotice">Changes will take effect after saving</string>
    <string name="alreadySelectedIcon">You have already selected this icon</string>

    <!-- Notifications -->

    <string name="ntf_text">It\'s time to sort!</string>
    <string name="contentTittleSrvFrg">We will remind you about sorting in </string>

    <string name="widgetText">Next sorting at </string>
    <string name="widgetTextDis">Remind service disabled :(</string>
    
    <!--    Level for Spinner -->
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

</resources>