<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sorting"
        android:icon="@drawable/ic_sorting"
        android:title="@string/title_sorting" />
    <item
        android:id="@+id/stats"
        android:title="@string/title_stats"
        android:icon="@drawable/ic_stats"/>

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/places"
        android:icon="@drawable/ic_places"
        android:title="@string/title_places" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />
</menu>

